add button style

--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
         <div class="slider__scroll-box">
           <div class="slider__pager-box">
             <div class="slider__btn">
-              <button class="btn-slider btn-next">
+              <button class="btn-prev">
                 <img src="images/triangle-left.png" alt="prev">
               </button>
               <img src="images/vr_line.png" alt="">
-              <button class="btn-slider btn-next">
-                <img src="images/triangle-left.png" alt="next">
+              <button class="btn-next">
+                <img src="images/triangle-right.png" alt="next">
               </button>
             </div>
             <p class="slider__pager">
