--- a/index.html
+++ b/index.html
@@ -12,46 +12,43 @@
 <header class="header">
   <div class="container">
     <div class="header__inner">
-      <div class="header__left">
-        <div class="header__logo">
-          <a href="#">
-            <img src="images/logo.png" alt="minus">
-          </a>
-        </div>
+      <div class="header__logo">
+        <a href="#">
+          <img src="images/logo.png" alt="minus">
+        </a>
       </div>
 
-      <div class="header__middle">
-        <nav class="nav">
-          <ul class="header__menu">
-            <li class="header__list">
-              <a href="#" class="header__link">
-                ABOUT
-              </a>
-            </li>
-            <li class="header__list">
-              <a href="#" class="header__link">
-                COMPANY
-              </a>
-            </li>
-            <li class="header__list">
-              <a href="#" class="header__link">
-                WORK
-              </a>
-            </li>
-            <li class="header__list">
-              <a href="#" class="header__link">
-                CONTACT
-              </a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-
-      <div class="header__right">
-        <div class="header__search">
-          <input type="text" class="header__search-input" id="search" />
-          <label for="search"></label>
+      <nav class="header__nav">
+        <div class="header__menu-burger">
+          <img src="images/burger.png" alt="">
         </div>
+        <ul class="header__menu">
+          <li class="header__list">
+            <a href="#" class="header__link">
+              ABOUT
+            </a>
+          </li>
+          <li class="header__list">
+            <a href="#" class="header__link">
+              COMPANY
+            </a>
+          </li>
+          <li class="header__list">
+            <a href="#" class="header__link">
+              WORK
+            </a>
+          </li>
+          <li class="header__list">
+            <a href="#" class="header__link">
+              CONTACT
+            </a>
+          </li>
+        </ul>
+      </nav>
+
+      <div class="header__search">
+        <input type="text" class="header__search-input" id="search"/>
+        <label for="search"></label>
       </div>
     </div>
   </div>
@@ -90,6 +87,7 @@
   </div>
 </div>
 
+<!--
 <section class="call-action section__wrap">
   <div class="container">
     <div class="call-action__inner">
@@ -217,6 +215,6 @@
       </p>
     </div>
   </div>
-</footer>
+</footer>-->
 </body>
 </html>
