--- a/index.html
+++ b/index.html
@@ -54,11 +54,12 @@
   </div>
 </header>
 
-<div class="banner-section">
+<!--<div class="banner-section">
   <div class="slider__image">
     <div class="slider__content">
       <div class="slider__content-box">
         <div class="slider__scroll-box">
+
           <div class="slider__pager-box">
             <div class="slider__btn">
               <button class="btn-prev">
@@ -73,11 +74,14 @@
               <span>2</span>/<span>5</span>
             </p>
           </div>
+
         </div>
+
         <p class="slider__text">
           At dawn on the 13th the Carnatic entered the port of Yokohama.At dawn on the 13th the Carnatic entered the
           port of Yokohama.At dawn on the 13th the Carnatic
         </p>
+
       </div>
       <button class="btn slider-btn">
         READ More about Miinus
@@ -85,9 +89,9 @@
 
     </div>
   </div>
-</div>
+</div>-->
 
-<!--
+
 <section class="call-action section__wrap">
   <div class="container">
     <div class="call-action__inner">
@@ -120,6 +124,7 @@
   </div>
 </section>
 
+<!--
 <footer class="footer">
   <section class="footer-top">
     <div class="container">
