--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   </div>
 </section>
 
-<!--
+
 <footer class="footer">
   <section class="footer-top">
     <div class="container">
@@ -186,40 +186,41 @@
   </section>
 
 
-  <div class="footer__bottom">
-    <div class="container">
-      <div class="footer__bottom-inner">
-        <div class="footer__bottom-left">
-          <a href="#" class="footer__bottom-phone">
-            210-884-8310
-          </a>
-
-          <a href="#" class="footer__bottom-mail">
-            contact@miinus.com
-          </a>
-
-
-          <div class="footer__bottom-btn-box">
-            <a href="#" class="footer__bottom-btn">FOLLOW US ON</a>
-            <a href="#" class="footer__bottom-btn">
-              <img src="images/twitter-black.png">
+    <div class="footer__bottom">
+      <div class="container">
+        <div class="footer__bottom-inner">
+          <div class="footer__bottom-left">
+            <a href="#" class="footer__bottom-phone">
+              210-884-8310
             </a>
-            <a href="#" class="footer__bottom-btn">
-              <img src="images/facebook-black.png">
+
+            <a href="#" class="footer__bottom-mail">
+              contact@miinus.com
             </a>
+
+
+            <div class="footer__bottom-btn-box">
+              <a href="#" class="footer__bottom-btn">FOLLOW US ON</a>
+              <a href="#" class="footer__bottom-btn">
+                <img src="images/twitter-black.png">
+              </a>
+              <a href="#" class="footer__bottom-btn">
+                <img src="images/facebook-black.png">
+              </a>
+            </div>
+
           </div>
-
+          <div class="footer__bottom-right">
+            <p class="footer__date">April 25, 2013</p>
+            <p class="footer__date-text">At dawn on the 13th the Carnatic entered the port of Yokohama.</p>
+          </div>
         </div>
-        <div class="footer__bottom-right">
-          <p class="footer__date">April 25, 2013</p>
-          <p class="footer__date-text">At dawn on the 13th the Carnatic entered the port of Yokohama.</p>
-        </div>
+        <p class="footer__copyright">
+          &copy; 2013, MIINUS, 4718 Cinnamon Lane, San Antonio, TX 78212
+        </p>
       </div>
-      <p class="footer__copyright">
-        &copy; 2013, MIINUS, 4718 Cinnamon Lane, San Antonio, TX 78212
-      </p>
     </div>
-  </div>
-</footer>-->
+
+</footer>
 </body>
 </html>
