--- a/index.html
+++ b/index.html
@@ -54,12 +54,13 @@
   </div>
 </header>
 
-<!--<div class="banner-section">
-  <div class="slider__image">
+  <div class="slider">
+    <div class="slider-image">
+      <img src="images/slider_base.jpg" alt="slider">
+    </div>
     <div class="slider__content">
       <div class="slider__content-box">
         <div class="slider__scroll-box">
-
           <div class="slider__pager-box">
             <div class="slider__btn">
               <button class="btn-prev">
@@ -79,17 +80,15 @@
 
         <p class="slider__text">
           At dawn on the 13th the Carnatic entered the port of Yokohama.At dawn on the 13th the Carnatic entered the
-          port of Yokohama.At dawn on the 13th the Carnatic
+          port of Yokohama.At dawn on the
         </p>
-
       </div>
-      <button class="btn slider-btn">
+
+      <button class="slider-btn">
         READ More about Miinus
       </button>
-
     </div>
   </div>
-</div>-->
 
 
 <section class="call-action section__wrap">
