--- a/index.html
+++ b/index.html
@@ -12,53 +12,52 @@
 <header class="header">
   <div class="container">
     <div class="header__inner">
-      <div class="header__left">
-        <div class="header__logo">
-          <a href="#">
-            <img src="images/logo.png" alt="minus">
-          </a>
-        </div>
+      <div class="header__logo">
+        <a href="#">
+          <img src="images/logo.png" alt="minus">
+        </a>
       </div>
 
-      <div class="header__middle">
-        <nav class="nav">
-          <ul class="header__menu">
-            <li class="header__list">
-              <a href="#" class="header__link">
-                ABOUT
-              </a>
-            </li>
-            <li class="header__list">
-              <a href="#" class="header__link">
-                COMPANY
-              </a>
-            </li>
-            <li class="header__list">
-              <a href="#" class="header__link">
-                WORK
-              </a>
-            </li>
-            <li class="header__list">
-              <a href="#" class="header__link">
-                CONTACT
-              </a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-
-      <div class="header__right">
-        <div class="header__search">
-          <input type="text" class="header__search-input" id="search" />
-          <label for="search"></label>
+      <nav class="header__nav">
+        <div class="header__menu-burger">
+          <img src="images/burger.png" alt="">
         </div>
+        <ul class="header__menu">
+          <li class="header__list">
+            <a href="#" class="header__link">
+              ABOUT
+            </a>
+          </li>
+          <li class="header__list">
+            <a href="#" class="header__link">
+              COMPANY
+            </a>
+          </li>
+          <li class="header__list">
+            <a href="#" class="header__link">
+              WORK
+            </a>
+          </li>
+          <li class="header__list">
+            <a href="#" class="header__link">
+              CONTACT
+            </a>
+          </li>
+        </ul>
+      </nav>
+
+      <div class="header__search">
+        <input type="text" class="header__search-input" id="search"/>
+        <label for="search"></label>
       </div>
     </div>
   </div>
 </header>
 
-<div class="banner-section">
-  <div class="slider__image">
+  <div class="slider">
+    <div class="slider-image">
+      <img src="images/slider_base.jpg" alt="slider">
+    </div>
     <div class="slider__content">
       <div class="slider__content-box">
         <div class="slider__scroll-box">
@@ -76,19 +75,21 @@
               <span>2</span>/<span>5</span>
             </p>
           </div>
+
         </div>
+
         <p class="slider__text">
           At dawn on the 13th the Carnatic entered the port of Yokohama.At dawn on the 13th the Carnatic entered the
-          port of Yokohama.At dawn on the 13th the Carnatic
+          port of Yokohama.At dawn on the
         </p>
       </div>
-      <button class="btn slider-btn">
+
+      <button class="slider-btn">
         READ More about Miinus
       </button>
-
     </div>
   </div>
-</div>
+
 
 <section class="call-action section__wrap">
   <div class="container">
@@ -121,6 +122,7 @@
     </div>
   </div>
 </section>
+
 
 <footer class="footer">
   <section class="footer-top">
@@ -183,40 +185,41 @@
   </section>
 
 
-  <div class="footer__bottom">
-    <div class="container">
-      <div class="footer__bottom-inner">
-        <div class="footer__bottom-left">
-          <a href="#" class="footer__bottom-phone">
-            210-884-8310
-          </a>
-
-          <a href="#" class="footer__bottom-mail">
-            contact@miinus.com
-          </a>
-
-
-          <div class="footer__bottom-btn-box">
-            <a href="#" class="footer__bottom-btn">FOLLOW US ON</a>
-            <a href="#" class="footer__bottom-btn">
-              <img src="images/twitter-black.png">
+    <div class="footer__bottom">
+      <div class="container">
+        <div class="footer__bottom-inner">
+          <div class="footer__bottom-left">
+            <a href="#" class="footer__bottom-phone">
+              210-884-8310
             </a>
-            <a href="#" class="footer__bottom-btn">
-              <img src="images/facebook-black.png">
+
+            <a href="#" class="footer__bottom-mail">
+              contact@miinus.com
             </a>
+
+
+            <div class="footer__bottom-btn-box">
+              <a href="#" class="footer__bottom-btn">FOLLOW US ON</a>
+              <a href="#" class="footer__bottom-btn">
+                <img src="images/twitter-black.png">
+              </a>
+              <a href="#" class="footer__bottom-btn">
+                <img src="images/facebook-black.png">
+              </a>
+            </div>
+
           </div>
-
+          <div class="footer__bottom-right">
+            <p class="footer__date">April 25, 2013</p>
+            <p class="footer__date-text">At dawn on the 13th the Carnatic entered the port of Yokohama.</p>
+          </div>
         </div>
-        <div class="footer__bottom-right">
-          <p class="footer__date">April 25, 2013</p>
-          <p class="footer__date-text">At dawn on the 13th the Carnatic entered the port of Yokohama.</p>
-        </div>
+        <p class="footer__copyright">
+          &copy; 2013, MIINUS, 4718 Cinnamon Lane, San Antonio, TX 78212
+        </p>
       </div>
-      <p class="footer__copyright">
-        &copy; 2013, MIINUS, 4718 Cinnamon Lane, San Antonio, TX 78212
-      </p>
     </div>
-  </div>
+
 </footer>
 </body>
 </html>
