--- a/index.html
+++ b/index.html
@@ -54,41 +54,42 @@
   </div>
 </header>
 
-  <div class="slider">
+<div class="slider">
+  <div class="slider__content">
     <div class="slider-image">
       <img src="images/slider_base.jpg" alt="slider">
     </div>
-    <div class="slider__content">
-      <div class="slider__content-box">
-        <div class="slider__scroll-box">
-          <div class="slider__pager-box">
-            <div class="slider__btn">
-              <button class="btn-prev">
-                <img src="images/triangle-left.png" alt="prev">
-              </button>
-              <img src="images/vr_line.png" alt="">
-              <button class="btn-next">
-                <img src="images/triangle-right.png" alt="next">
-              </button>
-            </div>
-            <p class="slider__pager">
-              <span>2</span>/<span>5</span>
-            </p>
-          </div>
 
+    <div class="slider__content-box">
+      <div class="slider__scroll-box">
+        <div class="slider__pager-box">
+          <div class="slider__btn">
+            <button class="btn-prev">
+              <img src="images/triangle-left.png" alt="prev">
+            </button>
+            <img src="images/vr_line.png" alt="">
+            <button class="btn-next">
+              <img src="images/triangle-right.png" alt="next">
+            </button>
+          </div>
+          <p class="slider__pager">
+            <span>2</span>/<span>5</span>
+          </p>
         </div>
 
-        <p class="slider__text">
-          At dawn on the 13th the Carnatic entered the port of Yokohama.At dawn on the 13th the Carnatic entered the
-          port of Yokohama.At dawn on the
-        </p>
       </div>
 
-      <button class="slider-btn">
-        READ More about Miinus
-      </button>
+      <p class="slider__text">
+        At dawn on the 13th the Carnatic entered the port of Yokohama.At dawn on the 13th the Carnatic entered the
+        port of Yokohama.At dawn on the
+      </p>
     </div>
+
+    <button class="slider-btn">
+      READ More about Miinus
+    </button>
   </div>
+</div>
 
 
 <section class="call-action section__wrap">
@@ -174,7 +175,7 @@
           <textarea class="form__text" placeholder="your message"></textarea>
           <div class="form__box">
             <input type="text" class="form__name" placeholder="Your name" name="name"/>
-            <input type="email" class="form__email" placeholder="e-mail address" name="email" />
+            <input type="email" class="form__email" placeholder="e-mail address" name="email"/>
           </div>
           <button class="form__btn" type="submit">
             send message
@@ -185,40 +186,42 @@
   </section>
 
 
-    <div class="footer__bottom">
-      <div class="container">
-        <div class="footer__bottom-inner">
-          <div class="footer__bottom-left">
-            <a href="#" class="footer__bottom-phone">
-              210-884-8310
-            </a>
+  <div class="footer__bottom">
+    <div class="container">
+      <div class="footer__bottom-inner">
+        <div class="footer__bottom-left">
+          <a href="#" class="footer__bottom-phone">
+            210-884-8310
+          </a>
 
-            <a href="#" class="footer__bottom-mail">
-              contact@miinus.com
-            </a>
+          <a href="#" class="footer__bottom-mail">
+            contact@miinus.com
+          </a>
 
 
-            <div class="footer__bottom-btn-box">
-              <a href="#" class="footer__bottom-btn">FOLLOW US ON</a>
-              <a href="#" class="footer__bottom-btn">
-                <img src="images/twitter-black.png">
+          <div class="footer__bottom-btn-box">
+            <a href="#" class="footer__bottom-btn">FOLLOW US ON</a>
+            <div class="footer__bottom-btn-container">
+              <a href="#" class="footer__bottom-btn-social">
+                <img src="images/twitter-black.png" alt="twitter">
               </a>
-              <a href="#" class="footer__bottom-btn">
-                <img src="images/facebook-black.png">
+              <a href="#" class="footer__bottom-btn-social">
+                <img src="images/facebook-black.png" alt="facebook">
               </a>
             </div>
+          </div>
 
-          </div>
-          <div class="footer__bottom-right">
-            <p class="footer__date">April 25, 2013</p>
-            <p class="footer__date-text">At dawn on the 13th the Carnatic entered the port of Yokohama.</p>
-          </div>
         </div>
-        <p class="footer__copyright">
-          &copy; 2013, MIINUS, 4718 Cinnamon Lane, San Antonio, TX 78212
-        </p>
+        <div class="footer__bottom-right">
+          <p class="footer__date">April 25, 2013</p>
+          <p class="footer__date-text">At dawn on the 13th the Carnatic entered the port of Yokohama.</p>
+        </div>
       </div>
+      <p class="footer__copyright">
+        &copy; 2013, MIINUS, 4718 Cinnamon Lane, San Antonio, TX 78212
+      </p>
     </div>
+  </div>
 
 </footer>
 </body>
