--- a/index.html
+++ b/index.html
@@ -55,39 +55,38 @@
 </header>
 
 <div class="slider">
-  <div class="slider__content">
     <div class="slider-image">
-      <img src="images/slider_base.jpg" alt="slider">
-    </div>
+      <img src="images/slider_base.jpg" alt="slider" class="slider-banner">
 
-    <div class="slider__content-box">
-      <div class="slider__scroll-box">
-        <div class="slider__pager-box">
-          <div class="slider__btn">
-            <button class="btn-prev">
-              <img src="images/triangle-left.png" alt="prev">
-            </button>
-            <img src="images/vr_line.png" alt="">
-            <button class="btn-next">
-              <img src="images/triangle-right.png" alt="next">
-            </button>
+      <div class="slider__content">
+        <div class="slider__content-box">
+          <div class="slider__scroll-box">
+            <div class="slider__pager-box">
+              <div class="slider__btn">
+                <button class="btn-prev">
+                  <img src="images/triangle-left.png" alt="prev">
+                </button>
+                <img src="images/vr_line.png" alt="">
+                <button class="btn-next">
+                  <img src="images/triangle-right.png" alt="next">
+                </button>
+              </div>
+              <p class="slider__pager">
+                <span>2</span>/<span>5</span>
+              </p>
+            </div>
+
           </div>
-          <p class="slider__pager">
-            <span>2</span>/<span>5</span>
+          <p class="slider__text">
+            At dawn on the 13th the Carnatic entered the port of Yokohama.At dawn on the 13th the Carnatic entered the
+            port of Yokohama.At dawn on the
           </p>
         </div>
 
-      </div>
-
-      <p class="slider__text">
-        At dawn on the 13th the Carnatic entered the port of Yokohama.At dawn on the 13th the Carnatic entered the
-        port of Yokohama.At dawn on the
-      </p>
-    </div>
-
-    <button class="slider-btn">
-      READ More about Miinus
-    </button>
+        <button class="slider-btn">
+          READ More about Miinus
+        </button>
+  </div>
   </div>
 </div>
 
