--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
         </div>
         <ul class="header__menu">
           <li class="header__list">
-            <a href="#" class="header__link">
+            <a href="#about" class="header__link">
               ABOUT
             </a>
           </li>
           <li class="header__list">
-            <a href="#" class="header__link">
+            <a href="#!" class="header__link">
               COMPANY
             </a>
           </li>
           <li class="header__list">
-            <a href="#" class="header__link">
+            <a href="#work" class="header__link">
               WORK
             </a>
           </li>
           <li class="header__list">
-            <a href="#" class="header__link">
+            <a href="#contact" class="header__link">
               CONTACT
             </a>
           </li>
@@ -91,7 +91,7 @@
 </div>
 
 
-<section class="call-action section__wrap">
+<section class="call-action section__wrap" id="about">
   <div class="container">
     <div class="call-action__inner">
       <h1 class="call-action__title">a short distance from that second capital</h1>
@@ -107,7 +107,7 @@
   </div>
 </section>
 
-<section class="project-inquiry section__wrap">
+<section class="project-inquiry section__wrap" id="work">
   <div class="container">
     <div class="project-inquiry__inner">
       <h1 class="project-inquiry__title">LIKE WHAT YOU SEE?</h1>
@@ -125,7 +125,7 @@
 
 
 <footer class="footer">
-  <section class="footer-top">
+  <section class="footer-top" id="contact">
     <div class="container">
       <div class="footer-top__inner">
         <ul class="footer-top__address address">
